fix: visible menu, when menu disappears in footer section

--- a/src/app.css
+++ b/src/app.css
@@ -47,5 +47,5 @@ body {
 }
 
 .rc_menu_hidden{
-	margin-top:-50vh;
+	margin-top:calc(-50vh - 5rem);
 }
